# arcade-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  README.md  setup.cfg
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py
