[metadata]
name = {{cookiecutter.project_slug}}
description = {{cookiecutter.description}}
long_description = file: README.md

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires =
  setuptools
  pip
install_requires =
  arcade

[options.packages.find]
include =
  {{cookiecutter.project_slug}}
  {{cookiecutter.project_slug}}.*

[options.extras_require]
dev =
  flake8
  black
  isort
  mypy

[bdist_wheel]
universal=0

[flake8]
max-line-length = 88
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88